update to bottlerocket release v1.51.0

--- a/sources/shared-defaults/kubernetes-aws-credential-provider.toml
+++ b/sources/shared-defaults/kubernetes-aws-credential-provider.toml
@@ -4,9 +4,11 @@ cache-duration = "12h"
 image-patterns = [
     "*.dkr.ecr.*.amazonaws.com",
     "*.dkr.ecr.*.amazonaws.com.cn",
+    "*.dkr.ecr.*.amazonaws.eu",
     "*.dkr-ecr.*.on.aws",
     "*.dkr-ecr.*.on.amazonwebservices.com.cn",
     "*.dkr.ecr-fips.*.amazonaws.com",
+    "*.dkr.ecr-fips.*.amazonaws.eu",
     "*.dkr.ecr.*.cloud.adc-e.uk",
     "*.dkr.ecr-fips.*.cloud.adc-e.uk",
     "*.dkr.ecr.*.c2s.ic.gov",
