--- a/variants/aws-compose/Cargo.toml
+++ b/variants/aws-compose/Cargo.toml
@@ -13,6 +13,9 @@ grub-set-private-var = true
 xfs-data-partition = true
 uefi-secure-boot = true
 systemd-networkd = true
+erofs-root-partition = true
+external-kmod-development = false
+encrypted-storage = true
 
 [package.metadata.build-variant]
 kernel-parameters = [
@@ -27,10 +30,14 @@ kernel-parameters = [
 included-packages = [
 # core
     "release",
-    "kernel-6.1",
+    "kernel-6.12",
+    "containerd-2.1",
+    "systemd-257",
+    "nftables",
+    "whippet",
 # docker
-    "docker-cli",
-    "docker-engine",
+    "docker-cli-29",
+    "docker-engine-29",
     "docker-init",
 # compose-containers
     "compose-containers",
