--- a/variants/aws-dev/Cargo.toml
+++ b/variants/aws-dev/Cargo.toml
@@ -13,6 +13,9 @@ grub-set-private-var = true
 xfs-data-partition = true
 uefi-secure-boot = true
 systemd-networkd = true
+erofs-root-partition = true
+external-kmod-development = false
+encrypted-storage = true
 
 [package.metadata.build-variant]
 kernel-parameters = [
@@ -27,23 +30,25 @@ kernel-parameters = [
 included-packages = [
 # core
     "release",
-    "kernel-6.1",
+    "kernel-6.12",
+    "containerd-2.1",
+    "systemd-257",
+    "nftables",
+    "whippet",
 # docker
-    "docker-cli",
-    "docker-engine",
+    "docker-cli-29",
+    "docker-engine-29",
     "docker-init",
 # tools
     "login",
     "iputils",
     "strace",
     "chrony-tools",
-    "soci-snapshotter",
 ]
 
 [lib]
 path = "../variants.rs"
 
 [build-dependencies]
-# core
 settings-defaults = { path = "../../packages/settings-defaults" }
 settings-plugins = { path = "../../packages/settings-plugins" }
